--- a/itis3135/stuff/CraP.html
+++ b/itis3135/stuff/CraP.html
@@ -8,7 +8,7 @@
     <header>
         <h1>Crap</h1>
     </header>
-    <img src="Big Pictures/Robloxguythat iseatingwater.jpg">
+    <img src="Big Pictures/Robloxguythat iseatingwater.jpg" width = "250"/>
     <main>
         <h2>crap</h2>
     </main>
