--- a/itis3135/stuff/CraP.html
+++ b/itis3135/stuff/CraP.html
@@ -6,7 +6,7 @@
 </head>
 <body style = "font-family: papyrus; color: red; background-color: aquamarine; font-size: 48px;">
     <header>
-        <h1>Crap</h1>
+        <h1 style = "font-family: papyrus;">Crap</h1>
     </header>
     <img src="Big Pictures/Robloxguythat iseatingwater.jpg" width = "2500"/>
     <main>
