--- a/itis3135/stuff/CraP.html
+++ b/itis3135/stuff/CraP.html
@@ -10,7 +10,7 @@
     </header>
     <img src="Big Pictures/Robloxguythat iseatingwater.jpg" width = "2500"/>
     <main>
-        <h2>crap</h2>
+        <h2 style="background-color: white;">crap</h2>
     </main>
     <footer>
         <a href = "/">ESCAPE</a>
