--- a/itis3135/stuff/CraP.html
+++ b/itis3135/stuff/CraP.html
@@ -11,7 +11,10 @@
     <img src="Big Pictures/Robloxguythat iseatingwater.jpg" width = "2500"/>
     <main>
         <h2 style = "font-family: 'Times New Roman', Times, serif; background-color: white;">
-            🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌘🌑🌓🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌑🌕🌕🌕🌗🌑🌑🌑🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌑🌕🌕🌖🌑👁🌑👁🌔🌗🌑🌕🌕🌕🌕🌕🌕🌕🌕🌘🌓🌕🌑🌑🌑🌑🌑🌔🌕🌘🌔🌕🌕🌕🌕🌕🌕🌕🌗🌑🌘🌑🌑🌑🌑🌑🌕🌖🌑🌕🌕🌕🌕🌕🌕🌕🌕🌕🌘🌑🌑🌑🌑🌑🌕🌖🌑🌔🌕🌕🌕🌕🌕🌕🌕🌕🌕🌖🌑🌑🌑🌑🌑🌑🌑🌔🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌗🌑🌑🌑🌑🌑🌑🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌘🌑🌕🌕🌘🌑🌔🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌑🌓🌕🌕🌗🌑🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌖🌑🌔🌕🌕🌖🌑🌔🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌗🌑🌕🌕🌕🌕🌑🌑🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕🌕
+            On April 30, 1789, George Washington, standing on the balcony of Federal Hall on Wall Street in New York,
+            took his oath of office as the first President of the United States. “As the first of every thing, in our situation 
+            will serve to establish a Precedent,” he wrote James Madison, “it is devoutly wished on my part, that these precedents 
+            may be fixed on true principles.”
         </h2>
     </main>
     <footer>
