--- a/itis3135/brand.html
+++ b/itis3135/brand.html
@@ -9,7 +9,7 @@
     <header>
         <h1>
             Ben Molk | ITIS 3135 |  Bronze Mammoth
-            <img src="images/Mammoth.jpg" class = "center">
+            <img src="images/Mammoth.jpg">
         </h1>
     </header>
     <nav>
