--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -22,7 +22,7 @@
         </nav>
         <hr>
     <main>
-        <h2> ITIS Homepage</h2>
+        <h2> Website Evaluations</h2>
         <p>Welcome</a>.</p>
     </main>
     <hr>
