--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -2,6 +2,13 @@
 <htlm lang = "en-US"> 
 <head>
     <meta charset = "uft-8">
+    <style>
+        img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        }
+        </style>
     <title>Ben Molk | ITIS 3135 |  Bronze Mammoth Introduction</title>
     <link href = "styles/default.css" type = "text/css" rel = "stylesheet">
 </head>
@@ -23,7 +30,7 @@
     <hr>
     <main>
         <h2>Ben Molk Introduction</h2>
-        <img src ="images/me.jpg" width = "700" display: block; margin-left: auto; margin-right: auto;>
+        <img src ="images/me.jpg" width = "700">
         <ul style = "list-style-type:disc">
         <li><b>Personal Background: </b> Hi my name is Ben Molk, but I mostly go by Ben. I was born in Indianapolis, Indiana, and lived there for 11 years before moving to Garner, North Carolina.</li>
         <li><b>Academic Background: </b> This is my fourth year at Charlotte but only my second year in Computer Science. I started out majoring in Computer Engineering but after 2 years in the major determined that it was not for me. I'm still a little unsure of what my plans are for the rest of my time here but for now, I am content with where I am.</li>
