--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -23,7 +23,7 @@
         <hr>
     <main>
         <h2> Website Evaluations</h2>
-        <h3><a href = "https://mythictrap.com/websites">Good Website |</a></h3>
+        <h3><a href = "https://mythictrap.com/websites">Good Website</a></h3>
     </main>
     <hr>
     <footer>
