--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -23,7 +23,8 @@
         <hr>
     <main>
         <h2> Website Evaluations</h2>
-        <h3><a href = "https://mythictrap.com/websites">Good Website</a></h3>
+        <h3>Good Website: <a href = "https://mythictrap.com/websites">Mythictrap</a></h3>
+            <p></p>
     </main>
     <hr>
     <footer>
