--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -25,6 +25,7 @@
         <h2> Website Evaluations</h2>
         <h3>Good Website: <a href = "https://mythictrap.com/websites">Mythictrap</a></h3>
             <p></p>
+        <h4>Bad Website: <a href = "https://arngren.net/">Arngren</a></h3></h4>
     </main>
     <hr>
     <footer>
