--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -28,7 +28,7 @@
             <p></p>
             <p></p>
             <p></p>
-        <h3>Bad Website: <a href = "https://arngren.net/">Arngren</a></h3></h4>
+        <h3>Bad Website: <a href = "https://arngren.net/">Arngren</a></h3>
             <p></p>
             <p></p>
             <p></p>
