--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -24,15 +24,15 @@
     <main>
         <h2> Website Evaluations</h2>
         <h3>Good Website: <a href = "https://mythictrap.com/websites">Mythictrap</a></h3>
-            <p></p>
-            <p></p>
-            <p></p>
-            <p></p>
+            <p>Contrast: </p>
+            <p>Repetition: </p>
+            <p>Alignment: </p>
+            <p>Proximity: </p>
         <h3>Bad Website: <a href = "https://arngren.net/">Arngren</a></h3>
-            <p></p>
-            <p></p>
-            <p></p>
-            <p></p>
+            <p>Contrast: </p>
+            <p>Repetition: </p>
+            <p>Alignment: </p>
+            <p>Proximity: </p>
     </main>
     <hr>
     <footer>
