--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -24,15 +24,16 @@
     <main>
         <h2> Website Evaluations</h2>
         <h3>Good Website: <a href = "https://mythictrap.com/websites">Mythictrap</a></h3>
-            <p>Contrast: </p>
-            <p>Repetition: </p>
-            <p>Alignment: </p>
-            <p>Proximity: </p>
+            <p>Contrast: This website uses a dark background with white text and has accents of yellow 
+                making information easy to read as well as making the site visually appealing.</p>
+            <p>Repetition: Elements on the website are consistent and the same layout is used for each page.</p>
+            <p>Alignment: The website has a centralized look with wider elemets being navigation menus.</p>
+            <p>Proximity: Elements on this website are in good proximity while keeping separate part distinguishable.</p>
         <h3>Bad Website: <a href = "https://arngren.net/">Arngren</a></h3>
-            <p>Contrast: </p>
-            <p>Repetition: </p>
-            <p>Alignment: </p>
-            <p>Proximity: </p>
+            <p>Contrast: The entire website is white with a bunch of different text colors making is difficult to identify items.</p>
+            <p>Repetition: Layouts are not consistent from text color to element sizes which makes the page very confusing.</p>
+            <p>Alignment: There isn't any sense of alignment as elements are all over the page.</p>
+            <p>Proximity: Everything is far too close together causing the page to look chaotic.</p>
     </main>
     <hr>
     <footer>
