--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -24,16 +24,20 @@
     <main>
         <h2> Website Evaluations</h2>
         <h3>Good Website: <a href = "https://mythictrap.com/websites">Mythictrap</a></h3>
-            <p><b>Contrast: </b>This website uses a dark background with white text and has accents of yellow 
-                making information easy to read as well as making the site visually appealing.</p>
-            <p><b>Repetition: </b>Elements on the website are consistent and the same layout is used for each page.</p>
-            <p><b>Alignment: </b>The website has a centralized look with wider elemets being navigation menus.</p>
-            <p><b>Proximity: </b>Elements on this website are in good proximity while keeping separate part distinguishable.</p>
+        <ul style = "list-style-type:disc">
+            <li><b>Contrast: </b>This website uses a dark background with white text and has accents of yellow 
+                making information easy to read as well as making the site visually appealing.</li>
+            <li><b>Repetition: </b>Elements on the website are consistent and the same layout is used for each page.</li>
+            <li><b>Alignment: </b>The website has a centralized look with wider elemets being navigation menus.</li>
+            <li><b>Proximity: </b>Elements on this website are in good proximity while keeping separate part distinguishable.</li>
+        </ul>
+        <ul style = "list-style-type:disc"></ul>
         <h3>Bad Website: <a href = "https://arngren.net/">Arngren</a></h3>
-            <p><b>Contrast: </b>The entire website is white with a bunch of different text colors making is difficult to identify items.</p>
-            <p><b>Repetition: </b>Layouts are not consistent from text color to element sizes which makes the page very confusing.</p>
-            <p><b>Alignment: </b>There isn't any sense of alignment as elements are all over the page.</p>
-            <p><b>Proximity: </b>Everything is far too close together causing the page to look chaotic.</p>
+            <li><b>Contrast: </b>The entire website is white with a bunch of different text colors making is difficult to identify items.</li>
+            <li><b>Repetition: </b>Layouts are not consistent from text color to element sizes which makes the page very confusing.</li>
+            <li><b>Alignment: </b>There isn't any sense of alignment as elements are all over the page.</li>
+            <li><b>Proximity: </b>Everything is far too close together causing the page to look chaotic.</li>
+        </ul>   
     </main>
     <hr>
     <footer>
