--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -23,7 +23,7 @@
         <hr>
     <main>
         <h2> Website Evaluations</h2>
-        <h3>Good Website: <a href = "https://mythictrap.com/websites">Mythictrap</a></h3>
+        <h3>Well-Done: <a href = "https://mythictrap.com/websites">Mythictrap</a></h3>
         <ul style = "list-style-type:disc">
             <li><b>Contrast: </b>This website uses a dark background with white text and has accents of yellow 
                 making information easy to read as well as making the site visually appealing.</li>
@@ -32,7 +32,7 @@
             <li><b>Proximity: </b>Elements on this website are in good proximity while keeping separate part distinguishable.</li>
         </ul>
         <ul style = "list-style-type:disc"></ul>
-        <h3>Bad Website: <a href = "https://arngren.net/">Arngren</a></h3>
+        <h3>Terrible: <a href = "https://arngren.net/">Arngren</a></h3>
             <li><b>Contrast: </b>The entire website is white with a bunch of different text colors making is difficult to identify items.</li>
             <li><b>Repetition: </b>Layouts are not consistent from text color to element sizes which makes the page very confusing.</li>
             <li><b>Alignment: </b>There isn't any sense of alignment as elements are all over the page.</li>
