Added first scripts page

--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -2,7 +2,7 @@
 <htlm lang = "en-US"> 
 <head>
     <meta charset = "uft-8">
-    <title>Ben Molk | ITIS 3135 |  Bronze Mammoth Home</title>
+    <title>Ben Molk | ITIS 3135 |  Bronze Mammoth Website Evaluations</title>
     <link href = "styles/default.css" type = "text/css" rel = "stylesheet">
 </head>
 <body>
@@ -17,6 +17,7 @@
             <a href = "form.html">Form |</a>
             <a href = "brand.html">Brand |</a>
             <a href = "stuff/CraP.html">Crap |</a>
+            <a href = "firstscripts.html">First Scripts |</a>
             <a href = "website_evaluations.html">Website Evaluations |</a>
             <a href = "/">Charlotte Home</a>
         </nav>
