--- a/itis3135/firstscripts.html
+++ b/itis3135/firstscripts.html
@@ -8,7 +8,6 @@
 <body>
     <header>
         <h1>Ben Molk | ITIS 3135 |  Bronze Mammoth</h1>
-    </header>
         <nav>
             <a href = "./">Home |</a>
             <a href = "introduction.html">Introduction |</a>
@@ -21,22 +20,23 @@
             <a href = "website_evaluations.html">Website Evaluations|</a>
             <a href = "/">Charlotte Home</a>
         </nav>
+    </header>
         <hr>
     <main>
         <h2> First Javascript</h2>
         <p>Javascript goes here</p>
         <p>
-            What is your first name: <br/>
+            What is your first name?: <br/>
             <input type = "text" placeholder = " John" id = "firstname" name = "firstname" />
             <br/>
-            How are you feeling today? <br/>
+            How are you feeling today?: <br/>
             <input type = "text" placeholder = " Good" id = "feeling" name = "feeling" />
             <br/><br/>
             <input onclick = "getName();" 
             type = "button" name = "submit" id = "submit" value = "Submit" />
             </p>
             <p id = "output">
-            stuff goes here.
+            Welcome
             </p>
         
         <script>
