--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <htlm lang = "en-US"> 
-    <head>
-        <meta charset = "uft-8">
-        <title>Ben Molk | ITIS 3135 |  Bronze Mammoth Contract</title>
-        <link href = "styles/default.css" type = "text/css" rel = "stylesheet">
-    </head>
+    <div data-include = "components/head.html" data-replace = "%pagetitle%:Contract" ></div>
 <body>
     <header>
         <h1>Ben Molk | ITIS 3135 |  Bronze Mammoth</h1>
