--- a/itis3135/firstscripts.html
+++ b/itis3135/firstscripts.html
@@ -40,28 +40,6 @@
             <p id="output">
                 Welcome
             </p>
-
-            <script>
-                document.getElementById("date").innerHTML = getDate();
-                function getDate() {
-                    var d = new Date(),
-                        minutes = d.getMinutes();
-                        hours = d.getHours() % 12;
-                        meridiem = d.getHours() >= 12 ? 'pm' : 'am',
-                        months = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'],
-                        days = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
-                    return "It is " + hours + ':' + minutes + meridiem + " on " + days[d.getDay()] + ', ' + months[d.getMonth()] + ' ' + d.getDate() + ', ' + d.getFullYear();
-                }
-
-                function getName() {
-                    let firstName = document.getElementById("firstname").value;
-
-                    let feeling = document.getElementById("feeling").value;
-
-                    let allText = "Hey there, " + firstName + "! I'm glad you're feeling " + feeling + "!";
-                    document.getElementById("output").innerHTML = allText;
-                }
-            </script>
         </main>
         <hr>
         <footer>
@@ -81,5 +59,6 @@
                 <img src="images/button_validation_html5.jpg">
             </p>
         </footer>
+        <script src = "scripts/defaultscripts.js"></script>
     </body>
 </htlm>
