changed company link to molk enterprises

--- a/itis3135/bronzemammoth.co/index.html
+++ b/itis3135/bronzemammoth.co/index.html
@@ -2,19 +2,19 @@
 <htlm lang = "en-US"> 
 <head>
     <meta charset = "uft-8">
-    <title>Ben Molk | Bronze Mammoth Home</title>
+    <title>Ben Molk | Molk Enterprises</title>
     <link href = "styles/bronze.css" type = "text/css" rel = "stylesheet">
 </head>
 <body>
     <header>
-        <h1>Bronze Mammoth</h1>
+        <h1>Molk Enterprises</h1>
     </header>
     <main>
         <h2> Home</h2>
-        <p>Welcome</a>.</p>
+        <p>Welcome</p>
     </main>
     <footer>
-        Bronze Mammoth&copy;2022.
+        Molk Enterprises&copy;2022.
     </footer>
     </body>
 </htlm>
