--- a/itis3135/firstscripts.html
+++ b/itis3135/firstscripts.html
@@ -53,7 +53,7 @@
                 <a href="https://jsfiddle.net/user/Bmolk/fiddles">JSfiddle |</a>
                 <a href="https://www.linkedin.com/in/benjamin-molk-584392207/">LinkedIn</a>
             </nav>
-            Created by <a href="bronzemammoth.co/index.html">Bronze Mammoth</a> &copy;2022.
+            Created by <a href="bronzemammoth.co/index.html">Molk Enterprises</a> &copy;2022.
             <p>
                 <img src="images/button_validation_css.jpg">
                 <img src="images/button_validation_html5.jpg">
