company page added

--- a/itis3135/bronzemammoth.co/index.html
+++ b/itis3135/bronzemammoth.co/index.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
-<htlm lang = "en-US"> 
-<head>
-    <meta charset = "uft-8">
-    <title>Ben Molk | Molk Enterprises</title>
-    <link href = "styles/bronze.css" type = "text/css" rel = "stylesheet">
-</head>
-<body>
-    <header>
-        <h1>Molk Enterprises</h1>
-    </header>
-    <main>
-        <h2> Home</h2>
-        <p>Welcome</p>
-    </main>
-    <footer>
-        Molk Enterprises&copy;2022.
-    </footer>
+<htlm lang="en-US">
+
+    <head>
+        <meta charset="uft-8">
+        <title>Ben Molk | Molk Enterprises</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Staatliches">
+        <style>
+            body{
+            background-color: #211A1D;
+            color: #F8F0FB;
+            margin-left: 200px;
+            margin-right: 200px;
+            font-family: "Staatliches";
+            }
+        </style>
+    </head>
+
+    <body>
+        <header>
+            <h1>Molk Enterprises</h1>
+            <h1><img src ="images/logo.PNG" width = "200"></h1>
+        </header>
+        <hr>
+        <main>
+            <h2> Home</h2>
+            <p>Welcome</p>
+        </main>
+        <hr>
+        <footer>
+            Molk Enterprises&copy;2022.
+        </footer>
     </body>
 </htlm>
