Added polygon page

--- a/itis3135/bronzemammoth.co/index.html
+++ b/itis3135/bronzemammoth.co/index.html
@@ -19,7 +19,7 @@
     <body>
         <header>
             <h1>Molk Enterprises</h1>
-            <h1><img src ="images/logo.PNG" width = "200"></h1>
+            <h1><img src ="images/logo.PNG" alt = "logo" width = "200"></h1>
         </header>
         <hr>
         <main>
