--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -19,6 +19,7 @@
             <a href = "stuff/CraP.html">Crap |</a>
             <a href = "firstscripts.html">First Scripts |</a>
             <a href = "website_evaluations.html">Website Evaluations|</a>
+            <a href = "polygon.html">Polygons |</a>
             <a href = "/">Charlotte Home</a>
         </nav>
         <hr>
