--- a/itis3135/polygon.html
+++ b/itis3135/polygon.html
@@ -2,37 +2,30 @@
 <htlm lang = "en-US"> 
 <head>
     <meta charset = "uft-8">
-    <title>Ben Molk | ITIS 3135 |  Bronze Mammoth Brand</title>
+    <title>Ben Molk | ITIS 3135 |  Bronze Mammoth Polygons</title>
     <link href = "styles/default.css" type = "text/css" rel = "stylesheet">
 </head>
 <body>
     <header>
-        <h1>
-            Ben Molk | ITIS 3135 |  Bronze Mammoth
-            <img src="images/Mammoth.jpg">
-        </h1>
+        <h1>Ben Molk | ITIS 3135 |  Bronze Mammoth</h1>
     </header>
-    <nav>
-        <a href = "./">Home |</a>
-        <a href = "introduction.html">Introduction |</a>
-        <a href = "contract.html">Contract |</a>
-        <a href = "table.html">Tables |</a>
-        <a href = "form.html">Form |</a>
-        <a href = "brand.html">Brand |</a>
-        <a href = "stuff/CraP.html">Crap |</a>
-        <a href = "firstscripts.html">First Scripts |</a>
-        <a href = "website_evaluations.html">Website Evaluations|</a>
-        <a href = "polygon.html">Polygons |</a>
-        <a href = "/">Charlotte Home</a>
-    </nav>
-    <hr>
+        <nav>
+            <a href = "./">Home |</a>
+            <a href = "introduction.html">Introduction |</a>
+            <a href = "contract.html">Contract |</a>
+            <a href = "table.html">Tables |</a>
+            <a href = "form.html">Form |</a>
+            <a href = "brand.html">Brand |</a>
+            <a href = "stuff/CraP.html">Crap |</a>
+            <a href = "firstscripts.html">First Scripts |</a>
+            <a href = "website_evaluations.html">Website Evaluations|</a>
+            <a href = "polygon.html">Polygons |</a>
+            <a href = "/">Charlotte Home</a>
+        </nav>
+        <hr>
     <main>
-        <h2>Bronze Mammoth</h2>
-        <p>Bronze Mammoth specializes in webpage design, creating clean webpage interfaces with guaranteed functionality! </p>
-        <p><b>Contact Information:</b></p>
-            <p>Email: bronzemammoth@gmail.com</p>
-            <p>Phone: 121-232-3434</p>
-            <p>Address: 9483 Oribos Dr, Charlotte, NC</p>
+        <h2> ITIS Homepage</h2>
+        <p>Welcome</a>.</p>
     </main>
     <hr>
     <footer>
