added prompt to polygon page

--- a/itis3135/polygon.html
+++ b/itis3135/polygon.html
@@ -24,8 +24,8 @@
         </nav>
         <hr>
     <main>
-        <h2> ITIS Homepage</h2>
-        <p>Welcome</a>.</p>
+        <h2 onclick = "promptSides()"> Name the Polygon</h2>
+        <h3 id = "results">stuff goes here</h3>
     </main>
     <hr>
     <footer>
@@ -45,5 +45,6 @@
             <img src="images/button_validation_html5.jpg">
         </p>
     </footer>
+    <script src = "scripts/defaultscripts.js"></script>
     </body>
 </htlm>
