--- a/itis3135/brand.html
+++ b/itis3135/brand.html
@@ -1,56 +1,59 @@
 <!DOCTYPE html>
-<htlm lang = "en-US"> 
-<head>
-    <meta charset = "uft-8">
-    <title>Ben Molk | ITIS 3135 |  Bronze Mammoth Brand</title>
-    <link href = "styles/default.css" type = "text/css" rel = "stylesheet">
-</head>
-<body>
-    <header>
-        <h1>
-            Ben Molk | ITIS 3135 |  Bronze Mammoth
-            <img src="images/Mammoth.jpg">
-        </h1>
-    </header>
-    <nav>
-        <a href = "./">Home |</a>
-        <a href = "introduction.html">Introduction |</a>
-        <a href = "contract.html">Contract |</a>
-        <a href = "table.html">Tables |</a>
-        <a href = "form.html">Form |</a>
-        <a href = "brand.html">Brand |</a>
-        <a href = "stuff/CraP.html">Crap |</a>
-        <a href = "firstscripts.html">First Scripts |</a>
-        <a href = "website_evaluations.html">Website Evaluations|</a>
-        <a href = "polygon.html">Polygons |</a>
-        <a href = "/">Charlotte Home</a>
-    </nav>
-    <hr>
-    <main>
-        <h2>Bronze Mammoth</h2>
-        <p>Bronze Mammoth specializes in webpage design, creating clean webpage interfaces with guaranteed functionality! </p>
-        <p><b>Contact Information:</b></p>
+<htlm lang="en-US">
+
+    <head>
+        <meta charset="uft-8">
+        <title>Ben Molk | ITIS 3135 | Bronze Mammoth Brand</title>
+        <link href="styles/default.css" type="text/css" rel="stylesheet">
+    </head>
+
+    <body>
+        <header>
+            <h1>
+                Ben Molk | ITIS 3135 | Bronze Mammoth
+                <img src="images/Mammoth.jpg">
+            </h1>
+        </header>
+        <nav>
+            <a href="./">Home |</a>
+            <a href="introduction.html">Introduction |</a>
+            <a href="contract.html">Contract |</a>
+            <a href="table.html">Tables |</a>
+            <a href="form.html">Form |</a>
+            <a href="brand.html">Brand |</a>
+            <a href="stuff/CraP.html">Crap |</a>
+            <a href="firstscripts.html">First Scripts |</a>
+            <a href="website_evaluations.html">Website Evaluations|</a>
+            <a href="polygon.html">Polygons |</a>
+            <a href="/">Charlotte Home</a>
+        </nav>
+        <hr>
+        <main>
+            <h2>Bronze Mammoth</h2>
+            <p>Bronze Mammoth specializes in webpage design, creating clean webpage interfaces with guaranteed
+                functionality! </p>
+            <p><b>Contact Information:</b></p>
             <p>Email: bronzemammoth@gmail.com</p>
             <p>Phone: 121-232-3434</p>
             <p>Address: 9483 Oribos Dr, Charlotte, NC</p>
-    </main>
-    <hr>
-    <footer>
-        <nav>
-            <a href = "https://webpages.charlotte.edu/bmolk/">Charlotte.edu |</a>
-            <a href = "https://github.com/Bmolk">Github|</a>
-            <a href = "https://bmolk.github.io/">Github.io|</a>
-            <a href = "https://bmolk.github.io/itis3135/">ITIS 3135 Github Pages|</a>
-            <a href = "https://www.codecademy.com/profiles/Bmolk">CodeAcademy |</a>
-            <a href = "https://www.freecodecamp.org/Bmolk">freeCodeCamp |</a>
-            <a href = "https://jsfiddle.net/user/Bmolk/fiddles">JSfiddle |</a>
-            <a href = "https://www.linkedin.com/in/benjamin-molk-584392207/">LinkedIn</a>
-        </nav>
-        Created by <a href = "bronzemammoth.co/index.html">Molk Enterprises</a> &copy;2022.
-        <p>
-            <img src="images/button_validation_css.jpg">
-            <img src="images/button_validation_html5.jpg">
-        </p>
-    </footer>
+        </main>
+        <hr>
+        <footer>
+            <nav>
+                <a href="https://webpages.charlotte.edu/bmolk/">Charlotte.edu |</a>
+                <a href="https://github.com/Bmolk">Github|</a>
+                <a href="https://bmolk.github.io/">Github.io|</a>
+                <a href="https://bmolk.github.io/itis3135/">ITIS 3135 Github Pages|</a>
+                <a href="https://www.codecademy.com/profiles/Bmolk">CodeAcademy |</a>
+                <a href="https://www.freecodecamp.org/Bmolk">freeCodeCamp |</a>
+                <a href="https://jsfiddle.net/user/Bmolk/fiddles">JSfiddle |</a>
+                <a href="https://www.linkedin.com/in/benjamin-molk-584392207/">LinkedIn</a>
+            </nav>
+            Created by <a href="bronzemammoth.co/index.html">Molk Enterprises</a> &copy;2022.
+            <p>
+                <img src="images/button_validation_css.jpg">
+                <img src="images/button_validation_html5.jpg">
+            </p>
+        </footer>
     </body>
 </htlm>
