--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -1,56 +1,67 @@
 <!DOCTYPE html>
-<htlm lang = "en-US"> 
+<htlm lang="en-US">
+
     <head>
-        <meta charset = "uft-8">
-        <title>Ben Molk | ITIS 3135 |  Bronze Mammoth Contract</title>
-        <link href = "styles/default.css" type = "text/css" rel = "stylesheet">
-    </head><body>
-    <header>
-        <h1>Ben Molk | ITIS 3135 |  Bronze Mammoth</h1>
-    </header>
-    <nav>
-        <a href = "./">Home |</a>
-        <a href = "introduction.html">Introduction |</a>
-        <a href = "contract.html">Contract |</a>
-        <a href = "table.html">Tables |</a>
-        <a href = "form.html">Form |</a>
-        <a href = "brand.html">Brand |</a>
-        <a href = "stuff/CraP.html">Crap |</a>
-        <a href = "firstscripts.html">First Scripts |</a>
-        <a href = "website_evaluations.html">Website Evaluations|</a>
-        <a href = "polygon.html">Polygons |</a>
-        <a href = "/">Charlotte Home</a>
-    </nav>
-    <hr>
-    <main>
-        <h2>Course Contract</h2>
-        <p>I, <a href = "introduction.html">Benjamin M. Molk </a> agree to abide by the terms of the course contract in my Spring 2022, ITIS 3135, Web Application Design and Development with my instructor, Professor D.I. von Briesen.</p>
+        <meta charset="uft-8">
+        <title>Ben Molk | ITIS 3135 | Bronze Mammoth Contract</title>
+        <link href="styles/default.css" type="text/css" rel="stylesheet">
+    </head>
 
-        <p>I understand that all work that I do on publicly available online tools will be available to the world, and will not put information there that is inappropriate for schoolwork, or that I wish to keep private.</p>
-
-        <p>I also understand that it is my work that counts for attendance, not logins or showing up for class. As such, failure to turn in assignments may show as absences.</p>
-            
-        <p>I also understand that given the structure and content of this class it’s possible to find many examples online or even view my classmates’ code directly. I swear that I will only use these resources to learn, and will not cut and paste code except where i have properly given credit (i.e. external libraries) and never from my classmates.</p>
-            
-        <p>Signed: <em>Benjamin M. Molk</em> , 01/25/2022</p>
-    </main>
-    <hr>
-    <footer>
+    <body>
+        <header>
+            <h1>Ben Molk | ITIS 3135 | Bronze Mammoth</h1>
+        </header>
         <nav>
-            <a href = "https://webpages.charlotte.edu/bmolk/">Charlotte.edu |</a>
-            <a href = "https://github.com/Bmolk">Github |</a>
-            <a href = "https://bmolk.github.io/">Github.io |</a>
-            <a href = "https://bmolk.github.io/itis3135/">ITIS 3135 Github Pages |</a>
-            <a href = "https://www.codecademy.com/profiles/Bmolk">CodeAcademy |</a>
-            <a href = "https://www.freecodecamp.org/Bmolk">freeCodeCamp |</a>
-            <a href = "https://jsfiddle.net/user/Bmolk/fiddles">JSfiddle |</a>
-            <a href = "https://www.linkedin.com/in/benjamin-molk-584392207/">LinkedIn</a>
+            <a href="./">Home |</a>
+            <a href="introduction.html">Introduction |</a>
+            <a href="contract.html">Contract |</a>
+            <a href="table.html">Tables |</a>
+            <a href="form.html">Form |</a>
+            <a href="brand.html">Brand |</a>
+            <a href="stuff/CraP.html">Crap |</a>
+            <a href="firstscripts.html">First Scripts |</a>
+            <a href="website_evaluations.html">Website Evaluations|</a>
+            <a href="polygon.html">Polygons |</a>
+            <a href="/">Charlotte Home</a>
         </nav>
-        Created by <a href = "bronzemammoth.co/index.html">Molk Enterprises</a> &copy;2022.
-        <p>
-            <img src="images/button_validation_css.jpg">
-            <img src="images/button_validation_html5.jpg">
-        </p>
-    </footer>
+        <hr>
+        <main>
+            <h2>Course Contract</h2>
+            <p>I, <a href="introduction.html">Benjamin M. Molk </a> agree to abide by the terms of the course contract
+                in my Spring 2022, ITIS 3135, Web Application Design and Development with my instructor, Professor D.I.
+                von Briesen.</p>
+
+            <p>I understand that all work that I do on publicly available online tools will be available to the world,
+                and will not put information there that is inappropriate for schoolwork, or that I wish to keep private.
+            </p>
+
+            <p>I also understand that it is my work that counts for attendance, not logins or showing up for class. As
+                such, failure to turn in assignments may show as absences.</p>
+
+            <p>I also understand that given the structure and content of this class it’s possible to find many examples
+                online or even view my classmates’ code directly. I swear that I will only use these resources to learn,
+                and will not cut and paste code except where i have properly given credit (i.e. external libraries) and
+                never from my classmates.</p>
+
+            <p>Signed: <em>Benjamin M. Molk</em> , 01/25/2022</p>
+        </main>
+        <hr>
+        <footer>
+            <nav>
+                <a href="https://webpages.charlotte.edu/bmolk/">Charlotte.edu |</a>
+                <a href="https://github.com/Bmolk">Github |</a>
+                <a href="https://bmolk.github.io/">Github.io |</a>
+                <a href="https://bmolk.github.io/itis3135/">ITIS 3135 Github Pages |</a>
+                <a href="https://www.codecademy.com/profiles/Bmolk">CodeAcademy |</a>
+                <a href="https://www.freecodecamp.org/Bmolk">freeCodeCamp |</a>
+                <a href="https://jsfiddle.net/user/Bmolk/fiddles">JSfiddle |</a>
+                <a href="https://www.linkedin.com/in/benjamin-molk-584392207/">LinkedIn</a>
+            </nav>
+            Created by <a href="bronzemammoth.co/index.html">Molk Enterprises</a> &copy;2022.
+            <p>
+                <img src="images/button_validation_css.jpg">
+                <img src="images/button_validation_html5.jpg">
+            </p>
+        </footer>
     </body>
 </htlm>
