--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -1,64 +1,70 @@
 <!DOCTYPE html>
-<htlm lang = "en-US"> 
-<head>
-    <meta charset = "uft-8">
-    <title>Ben Molk | ITIS 3135 |  Bronze Mammoth Website Evaluations</title>
-    <link href = "styles/default.css" type = "text/css" rel = "stylesheet">
-</head>
-<body>
-    <header>
-        <h1>Ben Molk | ITIS 3135 |  Bronze Mammoth</h1>
-    </header>
+<htlm lang="en-US">
+
+    <head>
+        <meta charset="uft-8">
+        <title>Ben Molk | ITIS 3135 | Bronze Mammoth Website Evaluations</title>
+        <link href="styles/default.css" type="text/css" rel="stylesheet">
+    </head>
+
+    <body>
+        <header>
+            <h1>Ben Molk | ITIS 3135 | Bronze Mammoth</h1>
+        </header>
         <nav>
-            <a href = "./">Home |</a>
-            <a href = "introduction.html">Introduction |</a>
-            <a href = "contract.html">Contract |</a>
-            <a href = "table.html">Tables |</a>
-            <a href = "form.html">Form |</a>
-            <a href = "brand.html">Brand |</a>
-            <a href = "stuff/CraP.html">Crap |</a>
-            <a href = "firstscripts.html">First Scripts |</a>
-            <a href = "website_evaluations.html">Website Evaluations |</a>
-            <a href = "polygon.html">Polygons |</a>
-            <a href = "/">Charlotte Home</a>
+            <a href="./">Home |</a>
+            <a href="introduction.html">Introduction |</a>
+            <a href="contract.html">Contract |</a>
+            <a href="table.html">Tables |</a>
+            <a href="form.html">Form |</a>
+            <a href="brand.html">Brand |</a>
+            <a href="stuff/CraP.html">Crap |</a>
+            <a href="firstscripts.html">First Scripts |</a>
+            <a href="website_evaluations.html">Website Evaluations |</a>
+            <a href="polygon.html">Polygons |</a>
+            <a href="/">Charlotte Home</a>
         </nav>
         <hr>
-    <main>
-        <h2> Website Evaluations</h2>
-        <h3>Well-Done: <a href = "https://mythictrap.com/websites">Mythictrap</a></h3>
-        <ul style = "list-style-type:disc">
-            <li><b>Contrast: </b>This website uses a dark background with white text and has accents of yellow 
-                making information easy to read as well as making the site visually appealing.</li>
-            <li><b>Repetition: </b>Elements on the website are consistent and the same layout is used for each page.</li>
-            <li><b>Alignment: </b>The website has a centralized look with wider elemets being navigation menus.</li>
-            <li><b>Proximity: </b>Elements on this website are in good proximity while keeping separate part distinguishable.</li>
-        </ul>
+        <main>
+            <h2> Website Evaluations</h2>
+            <h3>Well-Done: <a href="https://mythictrap.com/websites">Mythictrap</a></h3>
+            <ul style="list-style-type:disc">
+                <li><b>Contrast: </b>This website uses a dark background with white text and has accents of yellow
+                    making information easy to read as well as making the site visually appealing.</li>
+                <li><b>Repetition: </b>Elements on the website are consistent and the same layout is used for each page.
+                </li>
+                <li><b>Alignment: </b>The website has a centralized look with wider elemets being navigation menus.</li>
+                <li><b>Proximity: </b>Elements on this website are in good proximity while keeping separate part
+                    distinguishable.</li>
+            </ul>
 
-        <h3>Terrible: <a href = "https://arngren.net/">Arngren</a></h3>
-        <ul style = "list-style-type:disc">
-            <li><b>Contrast: </b>The entire website is white with a bunch of different text colors making is difficult to identify items.</li>
-            <li><b>Repetition: </b>Layouts are not consistent from text color to element sizes which makes the page very confusing.</li>
-            <li><b>Alignment: </b>There isn't any sense of alignment as elements are all over the page.</li>
-            <li><b>Proximity: </b>Everything is far too close together causing the page to look chaotic.</li>
-        </ul>   
-    </main>
-    <hr>
-    <footer>
-        <nav>
-            <a href = "https://webpages.charlotte.edu/bmolk/">Charlotte.edu |</a>
-            <a href = "https://github.com/Bmolk">Github|</a>
-            <a href = "https://bmolk.github.io/">Github.io|</a>
-            <a href = "https://bmolk.github.io/itis3135/">ITIS 3135 Github Pages|</a>
-            <a href = "https://www.codecademy.com/profiles/Bmolk">CodeAcademy |</a>
-            <a href = "https://www.freecodecamp.org/Bmolk">freeCodeCamp |</a>
-            <a href = "https://jsfiddle.net/user/Bmolk/fiddles">JSfiddle |</a>
-            <a href = "https://www.linkedin.com/in/benjamin-molk-584392207/">LinkedIn</a>
-        </nav>
-        Created by <a href = "bronzemammoth.co/index.html">Molk Enterprises</a> &copy;2022.
-        <p>
-            <img src="images/button_validation_css.jpg">
-            <img src="images/button_validation_html5.jpg">
-        </p>
-    </footer>
+            <h3>Terrible: <a href="https://arngren.net/">Arngren</a></h3>
+            <ul style="list-style-type:disc">
+                <li><b>Contrast: </b>The entire website is white with a bunch of different text colors making is
+                    difficult to identify items.</li>
+                <li><b>Repetition: </b>Layouts are not consistent from text color to element sizes which makes the page
+                    very confusing.</li>
+                <li><b>Alignment: </b>There isn't any sense of alignment as elements are all over the page.</li>
+                <li><b>Proximity: </b>Everything is far too close together causing the page to look chaotic.</li>
+            </ul>
+        </main>
+        <hr>
+        <footer>
+            <nav>
+                <a href="https://webpages.charlotte.edu/bmolk/">Charlotte.edu |</a>
+                <a href="https://github.com/Bmolk">Github|</a>
+                <a href="https://bmolk.github.io/">Github.io|</a>
+                <a href="https://bmolk.github.io/itis3135/">ITIS 3135 Github Pages|</a>
+                <a href="https://www.codecademy.com/profiles/Bmolk">CodeAcademy |</a>
+                <a href="https://www.freecodecamp.org/Bmolk">freeCodeCamp |</a>
+                <a href="https://jsfiddle.net/user/Bmolk/fiddles">JSfiddle |</a>
+                <a href="https://www.linkedin.com/in/benjamin-molk-584392207/">LinkedIn</a>
+            </nav>
+            Created by <a href="bronzemammoth.co/index.html">Molk Enterprises</a> &copy;2022.
+            <p>
+                <img src="images/button_validation_css.jpg">
+                <img src="images/button_validation_html5.jpg">
+            </p>
+        </footer>
     </body>
 </htlm>
