--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -1,60 +1,71 @@
 <!DOCTYPE html>
-<htlm lang = "en-US"> 
-<head>
-    <meta charset = "uft-8">
-    <title>Ben Molk | ITIS 3135 |  Bronze Mammoth Introduction</title>
-    <link href = "styles/default.css" type = "text/css" rel = "stylesheet">
-</head>
-<body>
-    <header>
-        <h1>Ben Molk | ITIS 3135 |  Bronze Mammoth</h1>
-    </header>
-    <nav>
-        <a href = "./">Home |</a>
-        <a href = "introduction.html">Introduction |</a>
-        <a href = "contract.html">Contract |</a>
-        <a href = "table.html">Tables |</a>
-        <a href = "form.html">Form |</a>
-        <a href = "brand.html">Brand |</a>
-        <a href = "stuff/CraP.html">Crap |</a>
-        <a href = "firstscripts.html">First Scripts |</a>
-        <a href = "website_evaluations.html">Website Evaluations|</a>
-        <a href = "polygon.html">Polygons |</a>
-        <a href = "/">Charlotte Home</a>
-    </nav>
-    <hr>
-    <main>
-        <h2>Ben Molk Introduction</h2>
-        <img src ="images/me.jpg" width = "700">
-        <ul style = "list-style-type:disc">
-        <li><b>Personal Background: </b> Hi my name is Ben Molk, but I mostly go by Ben. I was born in Indianapolis, Indiana, and lived there for 11 years before moving to Garner, North Carolina.</li>
-        <li><b>Academic Background: </b> This is my fourth year at Charlotte but only my second year in Computer Science. I started out majoring in Computer Engineering but after 2 years in the major determined that it was not for me. I'm still a little unsure of what my plans are for the rest of my time here but for now, I am content with where I am.</li>
-        <li><b>Background in this Subject: </b> I developed an interest in code while taking a C++ class in my freshman year. When I decided I wanted to change my major, Computer Science seemed like a good option to further explore and learn programming.</li>
-        <li><b>Courses: </b></li>
-            <ul style = "list-style-type:circle">
-            <li><b>ITIS-3135 Web App Design and Development: </b>Working towards a degree in Computer Science with a concentration in Software Engineering</li>
-            <li><b>ITSC-3155 Software Engineering: </b>Working towards a degree in Computer Science with a concentration in Software Engineering</li>
-            <li><b>ITSC-3181 Introduction to Computer Architecture: </b>Working towards a degree in Computer Science with a concentration in Software Engineering</li>
-            </ul>
-        </ul> 
-    </main>
-    <hr>
-    <footer>
+<htlm lang="en-US">
+
+    <head>
+        <meta charset="uft-8">
+        <title>Ben Molk | ITIS 3135 | Bronze Mammoth Introduction</title>
+        <link href="styles/default.css" type="text/css" rel="stylesheet">
+    </head>
+
+    <body>
+        <header>
+            <h1>Ben Molk | ITIS 3135 | Bronze Mammoth</h1>
+        </header>
         <nav>
-            <a href = "https://webpages.charlotte.edu/bmolk/">Charlotte.edu |</a>
-            <a href = "https://github.com/Bmolk">Github|</a>
-            <a href = "https://bmolk.github.io/">Github.io|</a>
-            <a href = "https://bmolk.github.io/itis3135/">ITIS 3135 Github Pages|</a>
-            <a href = "https://www.codecademy.com/profiles/Bmolk">CodeAcademy |</a>
-            <a href = "https://www.freecodecamp.org/Bmolk">freeCodeCamp |</a>
-            <a href = "https://jsfiddle.net/user/Bmolk/fiddles">JSfiddle |</a>
-            <a href = "https://www.linkedin.com/in/benjamin-molk-584392207/">LinkedIn</a>
+            <a href="./">Home |</a>
+            <a href="introduction.html">Introduction |</a>
+            <a href="contract.html">Contract |</a>
+            <a href="table.html">Tables |</a>
+            <a href="form.html">Form |</a>
+            <a href="brand.html">Brand |</a>
+            <a href="stuff/CraP.html">Crap |</a>
+            <a href="firstscripts.html">First Scripts |</a>
+            <a href="website_evaluations.html">Website Evaluations|</a>
+            <a href="polygon.html">Polygons |</a>
+            <a href="/">Charlotte Home</a>
         </nav>
-        Created by <a href = "bronzemammoth.co/index.html">Molk Enterprises</a> &copy;2022.
-        <p>
-            <img src="images/button_validation_css.jpg">
-            <img src="images/button_validation_html5.jpg">
-        </p>
-    </footer>
+        <hr>
+        <main>
+            <h2>Ben Molk Introduction</h2>
+            <img src="images/me.jpg" width="700">
+            <ul style="list-style-type:disc">
+                <li><b>Personal Background: </b> Hi my name is Ben Molk, but I mostly go by Ben. I was born in
+                    Indianapolis, Indiana, and lived there for 11 years before moving to Garner, North Carolina.</li>
+                <li><b>Academic Background: </b> This is my fourth year at Charlotte but only my second year in Computer
+                    Science. I started out majoring in Computer Engineering but after 2 years in the major determined
+                    that it was not for me. I'm still a little unsure of what my plans are for the rest of my time here
+                    but for now, I am content with where I am.</li>
+                <li><b>Background in this Subject: </b> I developed an interest in code while taking a C++ class in my
+                    freshman year. When I decided I wanted to change my major, Computer Science seemed like a good
+                    option to further explore and learn programming.</li>
+                <li><b>Courses: </b></li>
+                <ul style="list-style-type:circle">
+                    <li><b>ITIS-3135 Web App Design and Development: </b>Working towards a degree in Computer Science
+                        with a concentration in Software Engineering</li>
+                    <li><b>ITSC-3155 Software Engineering: </b>Working towards a degree in Computer Science with a
+                        concentration in Software Engineering</li>
+                    <li><b>ITSC-3181 Introduction to Computer Architecture: </b>Working towards a degree in Computer
+                        Science with a concentration in Software Engineering</li>
+                </ul>
+            </ul>
+        </main>
+        <hr>
+        <footer>
+            <nav>
+                <a href="https://webpages.charlotte.edu/bmolk/">Charlotte.edu |</a>
+                <a href="https://github.com/Bmolk">Github|</a>
+                <a href="https://bmolk.github.io/">Github.io|</a>
+                <a href="https://bmolk.github.io/itis3135/">ITIS 3135 Github Pages|</a>
+                <a href="https://www.codecademy.com/profiles/Bmolk">CodeAcademy |</a>
+                <a href="https://www.freecodecamp.org/Bmolk">freeCodeCamp |</a>
+                <a href="https://jsfiddle.net/user/Bmolk/fiddles">JSfiddle |</a>
+                <a href="https://www.linkedin.com/in/benjamin-molk-584392207/">LinkedIn</a>
+            </nav>
+            Created by <a href="bronzemammoth.co/index.html">Molk Enterprises</a> &copy;2022.
+            <p>
+                <img src="images/button_validation_css.jpg">
+                <img src="images/button_validation_html5.jpg">
+            </p>
+        </footer>
     </body>
 </htlm>
