added calculator js

--- a/itis3135/calculator_fcc.html
+++ b/itis3135/calculator_fcc.html
@@ -73,6 +73,6 @@
                 <img src="images/button_validation_html5.jpg">
             </p>
         </footer>
-        <script src="scripts/defaultscripts.js"></script>
+        <script src="scripts/calculator.js"></script>
     </body>
 </htlm>
