--- a/itis3135/calculator_fcc.html
+++ b/itis3135/calculator_fcc.html
@@ -27,11 +27,10 @@
         <hr>
         <main>
             <div class="container">
-                <p>
-                    This component works exactly like the calculator you know. Click any number to start calculating!
-                </p>
                 <div class="calculator">
-                    <div class="calculator__display">0</div>
+                    <div class="calculator-screen">
+                        <div class="displayValue">0</div>
+                    </div>
 
                     <div class="calculator__keys">
                         <button class="key--operator" data-action="add">+</button>
