--- a/itis3135/firstscripts.html
+++ b/itis3135/firstscripts.html
@@ -21,6 +21,7 @@
                 <a href="firstscripts.html">First Scripts |</a>
                 <a href="website_evaluations.html">Website Evaluations|</a>
                 <a href="polygon.html">Polygons |</a>
+                <a href="calculator_fcc.html">Calculator |</a>
                 <a href="/">Charlotte Home</a>
             </nav>
         </header>
