--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -22,6 +22,7 @@
             <a href="firstscripts.html">First Scripts |</a>
             <a href="website_evaluations.html">Website Evaluations |</a>
             <a href="polygon.html">Polygons |</a>
+            <a href="calculator_fcc.html">Calculator |</a>
             <a href="/">Charlotte Home</a>
         </nav>
         <hr>
