--- a/itis3135/firstscripts.html
+++ b/itis3135/firstscripts.html
@@ -32,10 +32,10 @@
             <p>This is a demonstration of my first javascripts.</p>
             <p>
                 What is your first name?: <br />
-                <input type="text" placeholder=" John" id="firstname" name="firstname" />
+                <input class = "form-input" type="text" placeholder=" John" id="firstname" name="firstname" />
                 <br />
                 How are you feeling today?: <br />
-                <input type="text" placeholder=" Good" id="feeling" name="feeling" />
+                <input class = "form-input" type="text" placeholder=" Good" id="feeling" name="feeling" />
                 <br /><br />
                 <input onclick="getName();" type="button" name="submit" id="submit" value="Submit" />
             </p>
