--- a/itis3135/calculator_fcc.html
+++ b/itis3135/calculator_fcc.html
@@ -79,8 +79,12 @@
             </nav>
             Created by <a href="bronzemammoth.co/index.html">Molk Enterprises</a> &copy;2022.
             <p>
-                <img src="images/button_validation_css.jpg">
-                <img src="images/button_validation_html5.jpg">
+                <a href="https://validator.w3.org/check?uri=referer">
+                    <img src="images/button_validation_css.jpg">
+                </a>
+                <a href="https://validator.w3.org/check?uri=referer">
+                    <img src="images/button_validation_html5.jpg">
+                </a>
             </p>
         </footer>
         <script src="scripts/calculator.js"></script>
